loic did some stuff

--- a/header.tex
+++ b/header.tex
@@ -15,6 +15,8 @@
 \usepackage{hyperref}   										% Objekte referenzieren (\autoref)
 \usepackage{subcaption}
 \usepackage{listings}
+\usepackage{tikz}
+\DeclareSIUnit{\Bit}{Bit} % bits 
 
 % dark mode
 %\usepackage{xcolor}			
