--- a/main.tex
+++ b/main.tex
@@ -3,9 +3,9 @@
 \rhead{}
 
 % anpassen!
-\chead{namedervorlesung - Praktikum 1}
-\lfoot{dd.mm.yyyy}
-\cfoot{name1, name2, name3}
+\chead{Digitaltechnick - Praktikum 3}
+\lfoot{13.05.2020}
+\cfoot{Loïc Fernau, Niklas Bammann}
 
 \rfoot{Seite \thepage}
 
@@ -32,12 +32,12 @@
 			{ \huge \bfseries Praktikumsprotokoll}
 			\rule{\linewidth}{0.5mm}\\[2cm]
 			% Termin anpassen
-			{ \huge \bfseries thema thema thema}\\[2cm]
+			{ \huge \bfseries Überwachung der Motorkühlung mittels Moore-Automat und Metastabilität}\\[2cm]
 
-			\LARGE name1 \\
-			\LARGE name2 \\[4cm]
+			\LARGE Loïc Fernau \\
+			\LARGE Niklas Bammann \\[4cm]
 			% Gruppe anpassen
-			\large vorlesung-kürzel
+			\large DIl
 		\end{center}
 	\end{titlepage}
 	\newpage
