--- a/tex/01_einleitung.tex
+++ b/tex/01_einleitung.tex
@@ -2,16 +2,16 @@
 
 
 
-\subsection{Verwendete Geräte/Software}
+\subsection{Verwendete Software}
 
-Für den Versuch wird folgende Geräte/Software verwendet:
+Für den Versuch wird folgende Software verwendet:
 
 \begin{table}[ht]
     \centering
     \begin{tabular}{|c|c|c|c|}\hline
-    \tbf{Gerätetyp}     & \tbf{Bezeichnung} \\ \hline
-                        &                   \\ \hline
-                        &                   \\ \hline
+    \tbf{Gerätetyp}             & \tbf{Bezeichnung}             \\ \hline
+    Betrebsystem                & Windows 10 Pro                \\ \hline
+    HDL-Simulationsumgebung     & ModelSim PE Student Edition   \\ \hline
     \end{tabular}
-    \caption{Auflistung der Geräte/Software}
+    \caption{Auflistung der Software}
 \end{table}
