--- a/header.tex
+++ b/header.tex
@@ -16,7 +16,6 @@
 \usepackage{subcaption}
 \usepackage{listings}
 \usepackage{tikz}
-\DeclareSIUnit{\Bit}{Bit} % bits 
 
 % dark mode
 %\usepackage{xcolor}			
@@ -50,3 +49,34 @@
 
 \DeclareSIUnit{\belvolt}{BV}
 \DeclareSIUnit{\dBV}{\deci\belvolt}
+
+\DeclareSIUnit{\Bit}{Bit} % bits 
+
+\usepackage{xcolor}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{codeblue}{rgb}{0,0,0.92}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{codestyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{codeblue},
+    numberstyle=\color{magenta},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+
+\lstset{style=codestyle}
