--- a/tex/01_einleitung.tex
+++ b/tex/01_einleitung.tex
@@ -1,6 +1,6 @@
 \section{Einleitung}
 
-
+In diesem Versuch soll ein Motorkühlungs Überwachungs Automat simuliert werden. Hierzu wird ein Zustandsmaschine gebildet die auf das Eingangssignal reagiert und drei Lampen ansteuert.
 
 \subsection{Verwendete Software}
 
