--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \rhead{}
 
 % anpassen!
-\chead{Digitaltechnick - Praktikum 3}
+\chead{Digitaltechnik - Praktikum 3}
 \lfoot{13.05.2020}
 \cfoot{Loïc Fernau, Niklas Bammann}
 
@@ -17,7 +17,7 @@
 
 \begin{document}
 	% Titelseite anpassen
-	%\includepdf[pages={3}]{pdf_ext/.pdf}
+	\includepdf[pages=-]{pdf_ext/24_DI_FTZ_Labor_3_SS2020.pdf}
 
  	\begin{titlepage}
  		\begin{flushright}
@@ -27,7 +27,7 @@
 		\begin{center}
 			%\textsc{\LARGE Hochschule für angewandte Wissenschaften}\\[0.2cm]
 			%\textsc{\LARGE Hamburg}\\[1.5cm]
-			\textsc{\Large vorlesung}
+			\textsc{\Large Vorlesung Digitaltechnik}
 			\rule{\linewidth}{0.5mm}\\[1.5cm]
 			{ \huge \bfseries Praktikumsprotokoll}
 			\rule{\linewidth}{0.5mm}\\[2cm]
@@ -37,7 +37,7 @@
 			\LARGE Loïc Fernau \\
 			\LARGE Niklas Bammann \\[4cm]
 			% Gruppe anpassen
-			\large DIl
+			\large DIP3
 		\end{center}
 	\end{titlepage}
 	\newpage
