--- a/tex/01_einleitung.tex
+++ b/tex/01_einleitung.tex
@@ -1,6 +1,6 @@
 \section{Einleitung}
 
-In diesem Versuch soll ein Motorkühlungs Überwachungs Automat simuliert werden. Hierzu wird ein Zustandsmaschine gebildet die auf das Eingangssignal reagiert und drei Lampen ansteuert.
+In diesem Versuch soll ein Motorkühlungsüberwachungsautomat simuliert werden. Ein Motor wird über drei Pumpen mit Kühlmittel versorgt. An jeder Pumpe ist ein Strömungssensor montiert, der eine logische 1 ausgibt, wenn die Pumpe funktioniert. Die drei Signale werden von einem Zustandsautomaten ausgewertet, welcher wiederum drei LEDs (Rot, Gelb, Grün) ein- oder ausschaltet, um den Zustand der Pumpen zu signalisieren.
 
 \subsection{Verwendete Software}
 
@@ -15,4 +15,3 @@ Für den Versuch wird folgende Software verwendet:
     \end{tabular}
     \caption{Auflistung der Software}
 \end{table}
-\newpage
