loic fixed stuff

--- a/tex/01_einleitung.tex
+++ b/tex/01_einleitung.tex
@@ -1,6 +1,6 @@
 \section{Einleitung}
 
-In diesem Versuch soll ein Motorkühlungsüberwachungsautomat simuliert werden. Ein Motor wird über drei Pumpen mit Kühlmittel versorgt. An jeder Pumpe ist ein Strömungssensor montiert, der eine logische 1 ausgibt, wenn die Pumpe funktioniert. Die drei Signale werden von einem Zustandsautomaten ausgewertet, welcher wiederum drei LEDs (Rot, Gelb, Grün) ein- oder ausschaltet, um den Zustand der Pumpen zu signalisieren.
+In diesem Versuch soll ein Motorkühlungsüberwachungsautomat simuliert werden. Ein Motor wird über drei Pumpen mit Kühlmittel versorgt. An jeder Pumpe ist ein Strömungssensor montiert, der eine logische 1 ausgibt, wenn die Pumpe funktioniert. Die drei Signale werden von einem Zustandsautomaten ausgewertet, welcher wiederum drei Lampen (Rot, Gelb, Grün) ein- oder ausschaltet, um den Zustand der Pumpen zu signalisieren.
 
 \subsection{Verwendete Software}
 
