--- a/tex/02_aufgabe.tex
+++ b/tex/02_aufgabe.tex
@@ -13,13 +13,14 @@ Zunächst wird ein Blockschaltbild der Schaltung gezeichnet. Das Blockschaltbild
 
 \begin{figure}[H]
     \begin{center}
-        \includegraphics[width=0.6\textwidth]{img/Motortemp2.png}
+        \includegraphics[width=0.8\textwidth]{img/test (2).png}
         \caption{Automatengraph}
         \label{fig:A1_Auto}
     \end{center}
 \end{figure}
 
-Das Eingangstupel besteht aus dem Signal der Pumpen-Sensoren. Der Übersichtlichkeit halber wurde auf dem Graph nur modelliert, dass eine Pumpe ausfallen oder wieder funktionieren kann. Der Automat kann Zustände auch überspringen, wenn z.B. zwei Pumpen gleichzeitig ausfallen, dies wurde zwecks Übersichtlichkeit nicht eingezeichnet.
+Das Eingangstupel besteht aus dem Signal der Pumpen-Sensoren. 
+%Der Übersichtlichkeit halber wurde auf dem Graph nur modelliert, dass eine Pumpe ausfallen oder wieder funktionieren kann. Der Automat kann Zustände auch überspringen, wenn z.B. zwei Pumpen gleichzeitig ausfallen, dies wurde zwecks Übersichtlichkeit nicht eingezeichnet.
  
 Tupel des Automaten:
 Zustände:
