--- a/tex/99_fazit.tex
+++ b/tex/99_fazit.tex
@@ -1,2 +1,7 @@
 
-%\section{Auswertung}
+\section{Fazit}
+insgseamt sieht man hier einen tollen automaten der keinen endzustand hat. und wo es irrelevant ist in welchem zustand er sich befindet. schön
+
+Der automat reagiert wie ein automat lol. er macht das was man ihm sagt.
+mehr nicht
+fazit ende
