--- a/tex/99_fazit.tex
+++ b/tex/99_fazit.tex
@@ -1,7 +1,4 @@
 
 \section{Fazit}
-insgseamt sieht man hier einen tollen automaten der keinen endzustand hat. und wo es irrelevant ist in welchem zustand er sich befindet. schön
 
-Der automat reagiert wie ein automat lol. er macht das was man ihm sagt.
-mehr nicht
-fazit ende
+In diesem Versuch haben wir gelernt wie ein Automat mit VHDL realisiert werden kann. Es hat uns gezeigt, dass eine gute Vorbereitung und Ausarbeitung aller Zustände sehr wichtig ist um ein korrekt funktionierendes System zu erhalten.
